tests/snapshots/compiler_error_fixtures/row_effects__missing_ambient_effect_deterministic_e400.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/missing_ambient_effect_deterministic_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `call_requires_io_time` requires effect `IO` in this function signature.

  examples/compiler_errors/row_effects/missing_ambient_effect_deterministic_e400.flx:11:5
   |
11 |     call_requires_io_time(worker)
   |     ^^^^^^^^^^^^^^^^^^^^^
   |     --------------------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
